# timeular-cli

./: .env  .gitignore  Cargo.toml  README.md
src/: api.rs  configuration.rs  console.rs  enums.rs  lib.rs  main.rs  models.rs  startup.rs
src/enums/: api.rs  command.rs  flag.rs  mod.rs  subcommand.rs  url.rs
src/helper/: input.rs
src/models/: Timeular.rs  flag.rs  mod.rs  print.rs  subcommand.rs  time.rs
tests/: flag.rs
