[package]
name = "timeular-cli"
version = "0.1.0"
authors = ["makiri1993 <kireew.martin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.0.0-beta.2" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4.19", features = ["serde"] }
log = { version = "0.4.14" }
colored = { version = "2" }